Fix spacing between Product card container and  side Nav

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
+body {
+  background-color: #eee;
+}
+
 a {
   text-decoration: none;
 }
@@ -66,6 +70,9 @@ a {
 
 .searchContainer input {
   flex: 1;
+  padding: 0.25rem 0.5rem;
+  border: 0;
+  border-bottom: 1px solid #4444bb;
 }
 
 .topContainer {
@@ -120,7 +127,7 @@ a {
   flex-direction: column;
   gap: 0.25rem;
   min-width: 25ch;
-  padding: 0rem 0.25rem;
+  padding: 0.25rem;
 }
 
 .sideNavContainer a {
@@ -130,10 +137,15 @@ a {
   padding: 0.5rem;
 }
 
+main {
+  padding: 0.25rem;
+  padding-right: 0.5rem;
+}
+
 .productCards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  grid-auto-rows: 28rem;
+  grid-auto-rows: 27rem;
   gap: 0.5rem;
 }
 
